# open_petro_elastic

./: .buildinfo  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  adjusting_with_depth_and_pressure.html  adusting_with_depth_and_pressure.html  command_line_options.html  config_file_format.html  conftest.py  doc_requirements.txt  generate_span_wagner_tables.py  genindex.html  getting_started_with_the_config_file_format.html  index.html  objects.inv  output.txt  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt  usage_as_a_library.html
.doctrees/: adjusting_with_depth_and_pressure.doctree  adusting_with_depth_and_pressure.doctree  command_line_options.doctree  config_file_format.doctree  environment.pickle  getting_started_with_the_config_file_format.doctree  index.doctree  usage_as_a_library.doctree
.doctrees/_autosummary/: open_petro_elastic.material.batzle_wang.brine_properties.doctree  open_petro_elastic.material.batzle_wang.doctree  open_petro_elastic.material.batzle_wang.hydro_carbon_gas.doctree  open_petro_elastic.material.batzle_wang.ideal_gas.doctree  open_petro_elastic.material.batzle_wang.oil_properties.doctree  open_petro_elastic.material.batzle_wang.water_properties.doctree  open_petro_elastic.material.conversions.doctree  open_petro_elastic.material.doctree  open_petro_elastic.material.fluid.doctree  open_petro_elastic.material.hashin_shtrikman.doctree  open_petro_elastic.material.material.doctree  open_petro_elastic.material.sandstone.constant_cement.doctree  open_petro_elastic.material.sandstone.contact_cement.doctree  open_petro_elastic.material.sandstone.doctree  open_petro_elastic.material.sandstone.friable_sand.doctree  open_petro_elastic.material.sandstone.hertz_mindlin.doctree  open_petro_elastic.material.sandstone.murphy_coordination_number.doctree  open_petro_elastic.material.sandstone.patchy_cement.doctree  open_petro_elastic.material.seismic_velocity.doctree  open_petro_elastic.material.span_wagner.carbon_dioxide.doctree  open_petro_elastic.material.span_wagner.coefficients.doctree  open_petro_elastic.material.span_wagner.doctree  open_petro_elastic.material.span_wagner.equations.doctree  open_petro_elastic.material.span_wagner.tables.doctree  open_petro_elastic.material.span_wagner.tables.lookup_table.doctree
.github/workflows/: python-build-test.yml  python-package.yml  python-publish.yml  python-sphinx-doc.yml
_autosummary/: open_petro_elastic.material.batzle_wang.brine_properties.html  open_petro_elastic.material.batzle_wang.html  open_petro_elastic.material.batzle_wang.hydro_carbon_gas.html  open_petro_elastic.material.batzle_wang.ideal_gas.html  open_petro_elastic.material.batzle_wang.oil_properties.html  open_petro_elastic.material.batzle_wang.water_properties.html  open_petro_elastic.material.conversions.html  open_petro_elastic.material.fluid.html  open_petro_elastic.material.hashin_shtrikman.html  open_petro_elastic.material.html  open_petro_elastic.material.material.html  open_petro_elastic.material.sandstone.constant_cement.html  open_petro_elastic.material.sandstone.contact_cement.html  open_petro_elastic.material.sandstone.friable_sand.html  open_petro_elastic.material.sandstone.hertz_mindlin.html  open_petro_elastic.material.sandstone.html  open_petro_elastic.material.sandstone.murphy_coordination_number.html  open_petro_elastic.material.sandstone.patchy_cement.html  open_petro_elastic.material.seismic_velocity.html  open_petro_elastic.material.span_wagner.carbon_dioxide.html  open_petro_elastic.material.span_wagner.coefficients.html  open_petro_elastic.material.span_wagner.equations.html  open_petro_elastic.material.span_wagner.html  open_petro_elastic.material.span_wagner.tables.html  open_petro_elastic.material.span_wagner.tables.lookup_table.html
_downloads/0f1ec0722a2349235e091342488794d7/: open_petro_elastic-material-batzle_wang-water_properties-1.py
_downloads/adc034c86bd252247c0304ae3e7c4777/: open_petro_elastic-material-batzle_wang-oil_properties-2.py
_downloads/d85ffb6adf538e57749769c0b4d0131d/: open_petro_elastic-material-batzle_wang-oil_properties-3.py
_modules/: index.html
_sources/: adjusting_with_depth_and_pressure.md.txt  getting_started_with_the_config_file_format.md.txt
_sources/_autosummary/: open_petro_elastic.material.batzle_wang.brine_properties.rst.txt  open_petro_elastic.material.batzle_wang.hydro_carbon_gas.rst.txt  open_petro_elastic.material.batzle_wang.ideal_gas.rst.txt  open_petro_elastic.material.batzle_wang.oil_properties.rst.txt  open_petro_elastic.material.batzle_wang.rst.txt  open_petro_elastic.material.batzle_wang.water_properties.rst.txt  open_petro_elastic.material.conversions.rst.txt  open_petro_elastic.material.fluid.rst.txt  open_petro_elastic.material.rst.txt  (+16 more)
docs/: adjusting_with_depth_and_pressure.md  adusting_with_depth_and_pressure.md  command_line_options.rst  conf.py  config_file_format.md  config_file_format.rst  getting_started_with_the_config_file_format.md  index.rst  usage_as_a_library.rst
examples/: batzle_wang_visualizations.py  carbon_dioxide_calibration.csv  carbon_dioxide_example.csv  carbon_dioxide_example.yaml  example1.yaml  example1_calibration.csv  example2.yaml  example2_calibration.csv  example3.csv  example3.yaml  example3_calibration.csv  example4.yaml  example4_calibration.csv  friable_sand_calibration.csv  friable_sand_example.yaml  patchy_cement_calibration.csv  patchy_cement_example.yaml
fixtures/: __init__.py
tests/: conftest.py  test_batzle_wang.py  test_coefficients.py  test_config_fluids.py  test_config_input.py  test_config_model.py  test_constant_cement.py  test_constituent.py  test_depth_trend.py  test_dryrock.py  test_dvorkin_nur.py  test_fluid_mixing.py  test_fluid_substitution.py  test_friable_sand.py  test_hashin_shtrikman.py  test_hertz_mindlin.py  test_main.py  test_material.py  test_minerals.py  test_murphy_coordination_number.py  test_patchy_cement.py  test_pressure.py  test_span_wagner.py
tutorial_config/: example2.yaml  tutorial_config.yaml  tutorial_data.csv
(+81 files in other folders)
